<resources>
    <string name="app_name">Piano Tiles</string>
    <string name="Start">Start</string>
    <string name="Easy">Easy</string>
    <string name="Normal">Normal</string>
    <string name="Hard">Hard</string>
    <string name="Volume">Volume</string>
    <string name="Done">Done</string>
    <string name="ChangeBg">Change Background</string>
    <string name="Default">Reset to default</string>
    <string name="Restart">Restart</string>
    <string name="Resume">Resume</string>
    <string name="Quit">Quit Game</string>
    <string name="Main_menu">Main menu</string>
    <string name="Score">Score</string>
    <string name="Level">Level</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="Created">Created By:</string>
    <string name="D">Deddy Chandra - 6181801007</string>
    <string name="B">Bryan Heryanto - 6181801031</string>
    <string name="M">Michael Alvino - 6181801041</string>
</resources>