<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:background="@drawable/background">
    </ImageView>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/container_background"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Score"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="30dp">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="100dp"
                android:text="777"
                android:textColor="@color/black"
                android:gravity="center">
            </TextView>
            <View
                android:layout_below="@+id/song_name_tv"
                android:id="@+id/line_view"
                android:layout_width="300dp"
                android:layout_height="2dp"
                android:background="#000000" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Level"
                    android:textColor="@color/black"
                    android:textSize="30dp">
                </TextView>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Easy"
                    android:textColor="@color/green"
                    android:textSize="30dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/restart_btn"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:text="@string/Restart">
        </Button>
        <Button
            android:id="@+id/quit_btn"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/Main_menu">
        </Button>
    </LinearLayout>
</RelativeLayout>