<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/background_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:background="@drawable/background">
    </ImageView>

    <ImageView
        android:id="@+id/vinyl_iv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/vinyl"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/song_name_container"
        android:layout_marginBottom="10dp">
    </ImageView>

<!--    <ImageView-->
<!--        android:id="@+id/stick_iv"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="150dp"-->
<!--        android:background="@drawable/stick"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_above="@+id/song_name_tv"-->
<!--        android:layout_marginBottom="100dp">-->
<!--    </ImageView>-->

    <RelativeLayout
        android:id="@+id/song_name_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@drawable/container_background"
        android:padding="5dp">
        <TextView
            android:id="@+id/song_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textColor="@color/black">
        </TextView>
        <View

            android:layout_below="@+id/song_name_tv"
            android:id="@+id/line_view"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="#000000"
           />

        <LinearLayout
            android:padding="5dp"
            android:id="@+id/level"
            android:layout_below="@+id/line_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_gray_button"
                android:text="@string/Easy"
                android:textStyle="bold"
                android:textColor="@color/gray">
            </Button>

            <Button
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_gray_button"
                android:text="@string/Normal"
                android:textStyle="bold"
                android:textColor="@color/gray">
            </Button>

            <Button
                android:id="@+id/hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_gray_button"
                android:text="@string/Hard"
                android:textStyle="bold"
                android:textColor="@color/gray">
            </Button>
        </LinearLayout>
    </RelativeLayout>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/start_btn"
            android:layout_below="@+id/song_name_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Start"
            android:textColor="@color/black"
            android:background="@drawable/round_fill_button"
            android:layout_centerHorizontal="true"
            android:textSize="18dp">
        </Button>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/setting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:background="#00000000"
        android:outlineAmbientShadowColor="#00FFFFFF"
        android:outlineSpotShadowColor="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        app:borderWidth="0dp"
        app:backgroundTint="@color/white"
        app:maxImageSize="50dp"
        android:clickable="true"
        app:srcCompat="@drawable/setting" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/volume_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="#00000000"
        android:outlineAmbientShadowColor="#00FFFFFF"
        android:outlineSpotShadowColor="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        app:borderWidth="0dp"
        app:backgroundTint="@color/white"
        app:maxImageSize="50dp"
        android:clickable="true"
        app:srcCompat="@drawable/music_on"/>
</RelativeLayout>